<resources>
    <string name="app_name">Local_Storage_team_2</string>
    <string name="create_an_account_tv">Create an account</string>
    <string name="login_tv">Login</string>
    <string name="sign_up_btn">Signup</string>
    <string name="user_details_tv">User Details</string>
    <string name="password_hint">Password</string>
    <string name="email_address_hint">Email Address</string>
    <string name="logout_btn">Logout</string>
    <string name="login_btn">Login</string>
    <string name="name_hint">Name</string>
    <string name="school_hint">School</string>
    <string name="welcome_to_team">Welcome to TEAM 2 Shared Preferences project application.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
</resources>